Trying to fix centering on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 /* Responsive styles */
 @media screen and (max-width:450px) {
   .App-header {
-    padding: 1rem;
+    margin: 1rem auto;
     max-width: 95%;
   }
 
